@@ -1,3 +1,4 @@
+Handled review issues
 # 0.00.47 (51069) Apr 22, 2011
 Fixed: laser can be rotated out of the play area
 Fixed: laser can be dragged out of the play area
